[package]
name = "day_14"
version = "0.1.0"
authors = ["Smaug123 <patrick+github@patrickstevens.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day_10 =  { path = "../day_10" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "day_14"
harness = false
