[package]
name = "day_5"
version = "0.1.0"
authors = ["Smaug123 <patrick+github@patrickstevens.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev_dependencies]
criterion = "0.3"

[[bench]]
name = "day_5_part_2"
harness = false
